--- a/resources/public/css/site.css
+++ b/resources/public/css/site.css
@@ -1,34 +1,116 @@
-.body-container {
-  font-family: 'Helvetica Neue', Verdana, Helvetica, Arial, sans-serif;
-  max-width: 640px;
-  margin: 0 auto;
-  padding-top: 72px;
-  -webkit-font-smoothing: antialiased;
-  font-size: 1.125em;
-  color: #333;
-  line-height: 1.5em;
+@font-face {
+    font-family: 'digital';
+    src: url(../fonts/digital.TTF);
 }
 
-h1, h2, h3 {
-  color: #000;
+body {
+    background-color: #2E3440;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-family: digital;
 }
-h1 {
-  font-size: 2.5em
+.App {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: min(2vh, 2vw);
+    color: #90A9C6;
+    max-height: min(100vh, 100vw);
+    max-width: min(100vh, 100vw);
+    min-height: min(100vh, 100vw);
+    min-width: min(100vh, 100vw);
 }
 
-h2 {
-  font-size: 2em
+.App:after {
+    display: block;
+    padding-bottom: 100%;
 }
 
-h3 {
-  font-size: 1.5em
+.item{
+  position: absolute;
+  text-align: right;
+  transition: all .25s;
+  width: 100%;
 }
 
-a {
-  text-decoration: none;
-  color: #09f;
+.item.active{
+  font-size: min(2.3vh, 2.3vw);
+  color: #A3BE8C;
 }
 
-a:hover {
-  text-decoration: underline;
+/* --- Small Circle --- */
+
+.weekday{
+    max-width: min(35vh, 35vw);
 }
+
+.month{
+    max-width: min(45vh, 45vw);
+}
+
+.day{
+    max-width: min(52vh, 52vw);
+}
+
+.hour{
+    max-width: min(62vh, 62vw);
+}
+
+.minute{
+    max-width: min(68vh, 68vw);
+}
+
+.second{
+    max-width: min(75vh, 75vw);
+}
+/* --- Big circle --- */
+/* .weekday{ */
+/*     max-width: min(50vh, 50vw); */
+/* } */
+
+/* .month{ */
+/*     max-width: min(60vh, 60vw); */
+/* } */
+
+/* .day{ */
+/*     max-width: min(67vh, 67vw); */
+/* } */
+
+/* .hour{ */
+/*     max-width: min(77vh, 77vw); */
+/* } */
+
+/* .minute{ */
+/*     max-width: min(83vh, 83vw); */
+/* } */
+
+/* .second{ */
+/*     max-width: min(90vh, 90vw); */
+/* } */
+/* --- Bands --- */
+/* .weekday{ */
+/*     max-width: min(35vh, 35vw); */
+/* } */
+
+/* .month{ */
+/*     max-width: min(55vh, 55vw); */
+/* } */
+
+/* .day{ */
+/*     max-width: min(62vh, 62vw); */
+/* } */
+
+/* .hour{ */
+/*     max-width: min(79vh, 79vw); */
+/* } */
+
+/* .minute{ */
+/*     max-width: min(83vh, 83vw); */
+/* } */
+
+/* .second{ */
+/*     max-width: min(90vh, 90vw); */
+/* } */
