--- a/docs/css/site.css
+++ b/docs/css/site.css
@@ -1,116 +1,1 @@
-@font-face {
-    font-family: 'digital';
-    src: url(../fonts/digital.TTF);
-}
-
-body {
-    background-color: #2E3440;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-family: digital;
-}
-.App {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: min(2vh, 2vw);
-    color: #90A9C6;
-    max-height: min(100vh, 100vw);
-    max-width: min(100vh, 100vw);
-    min-height: min(100vh, 100vw);
-    min-width: min(100vh, 100vw);
-}
-
-.App:after {
-    display: block;
-    padding-bottom: 100%;
-}
-
-.item{
-  position: absolute;
-  text-align: right;
-  transition: all .25s;
-  width: 100%;
-}
-
-.item.active{
-  font-size: min(2.3vh, 2.3vw);
-  color: #A3BE8C;
-}
-
-/* --- Small Circle --- */
-
-.weekday{
-    max-width: min(35vh, 35vw);
-}
-
-.month{
-    max-width: min(45vh, 45vw);
-}
-
-.day{
-    max-width: min(52vh, 52vw);
-}
-
-.hour{
-    max-width: min(62vh, 62vw);
-}
-
-.minute{
-    max-width: min(68vh, 68vw);
-}
-
-.second{
-    max-width: min(75vh, 75vw);
-}
-/* --- Big circle --- */
-/* .weekday{ */
-/*     max-width: min(50vh, 50vw); */
-/* } */
-
-/* .month{ */
-/*     max-width: min(60vh, 60vw); */
-/* } */
-
-/* .day{ */
-/*     max-width: min(67vh, 67vw); */
-/* } */
-
-/* .hour{ */
-/*     max-width: min(77vh, 77vw); */
-/* } */
-
-/* .minute{ */
-/*     max-width: min(83vh, 83vw); */
-/* } */
-
-/* .second{ */
-/*     max-width: min(90vh, 90vw); */
-/* } */
-/* --- Bands --- */
-/* .weekday{ */
-/*     max-width: min(35vh, 35vw); */
-/* } */
-
-/* .month{ */
-/*     max-width: min(55vh, 55vw); */
-/* } */
-
-/* .day{ */
-/*     max-width: min(62vh, 62vw); */
-/* } */
-
-/* .hour{ */
-/*     max-width: min(79vh, 79vw); */
-/* } */
-
-/* .minute{ */
-/*     max-width: min(83vh, 83vw); */
-/* } */
-
-/* .second{ */
-/*     max-width: min(90vh, 90vw); */
-/* } */
+@font-face{font-family:'digital';src:url(../fonts/digital.TTF)}body{background-color:#2e3440;display:flex;flex-direction:column;align-items:center;justify-content:center;font-family:digital}.App{display:flex;flex-direction:column;align-items:center;justify-content:center;font-size:min(2vh,2vw);color:#90a9c6;max-height:min(100vh,100vw);max-width:min(100vh,100vw);min-height:min(100vh,100vw);min-width:min(100vh,100vw)}.App:after{display:block;padding-bottom:100%}.item{position:absolute;text-align:right;transition:all .25s;width:100%}.item.active{font-size:min(2.3vh,2.3vw);color:#a3be8c}.weekday{max-width:min(35vh,35vw)}.month{max-width:min(45vh,45vw)}.day{max-width:min(52vh,52vw)}.hour{max-width:min(62vh,62vw)}.minute{max-width:min(68vh,68vw)}.second{max-width:min(75vh,75vw)}
